--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "vinyl",
     "gulp-debug"
   ],
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "author": "Ben Michaud <ben@tigersway.net>",
   "repository": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "ansi-colors": "^4.1.1",
     "fancy-log": "^1.3.3",
+    "replace-homedir": "^1.0.0",
     "through2": "^3.0.1"
   }
 }
